--- a/index.html
+++ b/index.html
@@ -25,5 +25,74 @@
         </h3>
     </header>
     <!-- / Sezione header -->
+    <!-- Sezione main content -->
+    <main>
+        <div>
+            <img src="img/tim-1.jpg" alt="">
+            <img src="img/tim-2.jpg" alt="">
+            <div>
+                <span>
+                    1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen
+                    <br />
+                    2nd Photo: Wimimedia, by Paul Clarke
+                </span>
+            </div>
+        </div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ipsam dolor veniam quae. Illo facere consequuntur animi beatae, aperiam consequatur adipisci esse modi repellendus natus non neque excepturi officia sapiente!
+            Praesentium qui est perspiciatis soluta magni, <span class="text-highlighted">voluptatum delectus iste molestias, quam sapiente tempora, nihil quisquam!</span> Similique, voluptatum vitae quod ipsam illo nulla, cupiditate provident officia laboriosam unde voluptatem aliquam magnam?
+            Distinctio quam magni a delectus voluptatem ex iure libero, dolor alias quod? Voluptatem veritatis aspernatur similique ullam dolor tenetur suscipit consequatur provident cumque perferendis. Provident magnam architecto dolor repellendus deserunt.
+            Voluptates aliquam autem ipsa, et temporibus sint consequatur corrupti id iure voluptatibus quo necessitatibus vitae, nemo dolor numquam, quis explicabo ducimus maxime ea. Distinctio ipsam modi excepturi, ad atque obcaecati.
+        </p>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam eligendi ipsum repellendus reprehenderit exercitationem, doloremque reiciendis in molestias eum atque nesciunt voluptate officia nostrum provident quibusdam dolore natus nihil mollitia!</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia voluptatibus maxime unde in voluptatem, cupiditate neque accusantium, aliquam eius sed minus facere, similique suscipit labore necessitatibus quas dolore ratione at.</li>
+            <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam tempora eveniet eum omnis ducimus repellendus voluptatibus, dicta esse ipsa expedita temporibus obcaecati deleniti ab tenetur facere nihil nulla. Ratione, dolorem.</li>
+        </ul>
+        <!-- Tabella -->
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                    <th>Lorem ipsum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="even">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex a culpa vero consectetur corporis perferendis incidunt sed, laudantium nisi amet dolorum assumenda, tempore eveniet veniam odio repellat, neque ratione cumque.
+                        Labore laudantium recusandae fuga, repudiandae sint, numquam tenetur iusto dolore amet ab maiores accusamus, voluptatem dolores reiciendis voluptas dignissimos eveniet dolor consequatur autem id! Quae consequatur amet eaque labore numquam.
+                    </td>
+                </tr>
+                <tr>
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio consectetur cum aperiam culpa doloremque perferendis nihil velit ex qui placeat? Quasi, sed? Saepe laborum sit dignissimos harum distinctio, excepturi nesciunt?
+                        Perferendis, explicabo vero odio veritatis exercitationem ipsum, in quisquam sapiente cupiditate tenetur debitis, labore repudiandae consequuntur quam deleniti eligendi eum unde. Hic quibusdam quod eligendi obcaecati, nemo natus corporis vero?
+                    </td>
+                </tr>
+                <tr class="even">
+                    <td>Lorem ipsum dolor</td>
+                    <td>Lorem ipsum dolor</td>
+                    <td>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et fugiat commodi repudiandae odit consequatur necessitatibus eligendi, dolores voluptatem incidunt eos non, laboriosam vel officia! Esse animi labore facere aliquid excepturi!
+                        Ratione aperiam asperiores voluptatem iusto eos temporibus, nulla quaerat? Numquam, distinctio voluptatum! Aliquam quod animi doloremque aspernatur eius aliquid perspiciatis itaque id. Expedita laboriosam assumenda a corrupti aliquam dolorem deserunt?
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- / Tabella -->
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quasi at distinctio quia doloribus ducimus illo reiciendis quis nostrum natus! Eaque debitis deleniti neque id ullam, quae molestias modi eos.
+            Tempore impedit temporibus omnis? Facilis voluptatibus libero dolorum? Tenetur impedit explicabo libero iusto maiores exercitationem consequuntur non, dolorum vero eius qui, rem error facere cum provident voluptatibus excepturi tempore. Ipsam?
+            Quo nulla deserunt, numquam eos vitae <span class="text-highlighted">dolor ut nemo voluptate iste ipsa laudantium esse animi impedit natus? Iure non earum magni alias.</span> Unde dolorum vel quaerat soluta molestiae error accusamus?
+            Quas quisquam illum, porro corrupti, fuga excepturi perferendis culpa odio aliquam ipsam sint eligendi voluptatem praesentium magni quibusdam veritatis tempore natus dolorum? Modi ipsa corporis quae et vel placeat excepturi.
+        </p>
+    </main>
+    <!-- / Sezione main content -->
 </body>
 </html>
