aggiunta del footer

--- a/index.html
+++ b/index.html
@@ -94,5 +94,19 @@
         </p>
     </main>
     <!-- / Sezione main content -->
+
+    <!-- Sezione footer -->
+    <footer>
+        <div>
+            <h4 class="grey text">Potrebbero interessarti</h4>
+            <div class="monitor-image">
+                <p class="text">Lorem ipsum dolor</p>
+            </div>
+            <div class="graph-image">
+                <p class="text">Lorem ipsum dolor</p>
+            </div>
+        </div>
+    </footer>
+    <!-- / Sezione footer -->
 </body>
 </html>
